--- a/backendkled/ledfront/src/app/components/shoping/shoping.component.css
+++ b/backendkled/ledfront/src/app/components/shoping/shoping.component.css
@@ -34,6 +34,14 @@ tr th{
     text-transform: uppercase;
 
 }
+.plm{
+    font-size: 20px;
+    border: 1px solid rgb(160, 160, 160);
+    border-radius: 2px;
+    cursor: pointer;
+    padding: 2px 6px;
+
+}
 button{
     outline: none;
 }
