--- a/backendkled/ledfront/src/app/components/home/home.component.html
+++ b/backendkled/ledfront/src/app/components/home/home.component.html
@@ -64,7 +64,7 @@
     </div>
     <div class="proizvodi">
 
-      <div *ngFor="let art of artikli |paginate:{ 
+      <div *ngFor="let art of akcijski |paginate:{ 
         itemsPerPage:itemPerPage, 
         currentPage: p}">
 
