--- a/backendkled/ledfront/src/app/adding/addart/addart.component.html
+++ b/backendkled/ledfront/src/app/adding/addart/addart.component.html
@@ -33,12 +33,12 @@
             <mat-select required formControlName="vrstaProizvoda">
                 <mat-option value="lusteri">Lusteri</mat-option>
                 <mat-option value="visilice">Visilice</mat-option>
+                <mat-option value="plafonskeLampe">Plafonske lampe</mat-option>
                 <mat-option value="spotovi">Spotovi</mat-option>
                 <mat-option value="decijaRasveta">Decija rasveta</mat-option>
-                <mat-option value="plafonjere">Plafonjere</mat-option>
+               <!--  <mat-option value="plafonjere">Plafonjere</mat-option> -->
                 <mat-option value="podneLampe">Podne lampe</mat-option>
                 <mat-option value="zidneLampe">Zidne lampe</mat-option>
-                <mat-option value="plafonskeLampe">Plafonske lampe</mat-option>
                 <mat-option value="stoneLampe">Stone lampe</mat-option>
                 <mat-option value="ledSijalice">Led sijalice</mat-option>
                 <mat-option value="ledCevi">Led cevi</mat-option>
