--- a/backendkled/ledfront/src/app/components/home/home.component.html
+++ b/backendkled/ledfront/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home">
-  <div class="grid">
+ <!--  <div class="grid">
     <img src="../../../assets/home/pozz.png" alt="">
-    <!-- <mat-grid-list cols="3" rowHeight="4:3">
+     <mat-grid-list cols="3" rowHeight="4:3">
       
       <mat-grid-tile colspan=3></mat-grid-tile>
     
@@ -10,8 +10,8 @@
       <mat-grid-tile><img src="../../../assets/home/black-modern-chandelier-4-light-5-light-santurn-ii-led-collection-pendant-light-fixture-cord-adjustable-brushed-aluminum-circular-led-chandelier-warm-white-neutral-li.jpg" alt=""></mat-grid-tile>
   
  
-    </mat-grid-list> -->
-  </div>
+    </mat-grid-list> 
+  </div> -->
   <ngb-carousel>
     <ng-template ngbSlide>
       <div class="slideimg">
@@ -58,9 +58,9 @@
       maxSize="5"> </pagination-controls>
     <div class="itemPer">
       <span>Prikaži: &nbsp;</span>
-      <span (click)="changePerPage(10)">10 &nbsp;/&nbsp;</span>
       <span (click)="changePerPage(20)">20 &nbsp;/&nbsp;</span>
-      <span (click)="changePerPage(30)">30</span>
+      <span (click)="changePerPage(30)">30 &nbsp;/&nbsp;</span>
+      <span (click)="changePerPage(40)">40</span>
     </div>
     <div class="proizvodi">
 
