--- a/backendkled/ledfront/src/app/footer/footer.component.html
+++ b/backendkled/ledfront/src/app/footer/footer.component.html
@@ -20,6 +20,7 @@
         </section>
         <section class="footer4">
             <h2>Lokacija</h2>
+            <h3>Panticeva 25, 14000 Valjevo</h3>
             <div class="lokacija">
                 <iframe src="https://snazzymaps.com/embed/242835" width="100%" height="100%" [ngStyle]="{'border':'none', 'border-radius': '10px'}"></iframe>
             </div>
