Poslednji komadi comp

--- a/backendkled/ledfront/src/app/components/dialogs/edit-art-dialog/edit-art-dialog.component.html
+++ b/backendkled/ledfront/src/app/components/dialogs/edit-art-dialog/edit-art-dialog.component.html
@@ -89,6 +89,8 @@
 
         <mat-checkbox [(ngModel)]="data.akcija" name="akcija">Akcija</mat-checkbox>
 
+        <mat-checkbox [(ngModel)]="data.poslednji" name="poslednji">Poslednji komad</mat-checkbox>
+
 
         <div>
             <button mat-raised-button class="center" color="primary" [mat-dialog-close]="1" type="submit">Edit</button>
