--- a/backendkled/ledfront/src/app/adding/addart/addart.component.html
+++ b/backendkled/ledfront/src/app/adding/addart/addart.component.html
@@ -100,6 +100,8 @@
 
 
         <mat-checkbox formControlName="akcija">Akcija</mat-checkbox>
+        
+        <mat-checkbox formControlName="poslednji" [ngStyle]="{'margin-left':'10px'}">Poslednji Komad</mat-checkbox>
 
 
         <div class="form-group " style=" width: 400px; ">
